Add Vimeo service utility for video uploads and management
- Implemented Vimeo client initialization with error handling for missing credentials.
- Created functions to handle video upload ticket creation, video detail retrieval, privacy updates, and course folder creation.
- Updated privacy settings to allow public viewing and embedding for Basic accounts.

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "multer": "^1.4.5-lts.2",
     "nodemailer": "^6.10.0",
     "stripe": "^18.0.0",
+    "vimeo": "^2.3.1",
     "xss-clean": "^0.1.4"
   },
   "devDependencies": {
