--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "nodemailer": "^6.10.0",
     "stripe": "^18.0.0",
     "vimeo": "^2.3.1",
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0",
     "xss-clean": "^0.1.4"
   },
   "devDependencies": {
