--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "multer": "^1.4.5-lts.2",
     "nodemailer": "^6.10.0",
     "stripe": "^18.0.0",
+    "uuid": "^11.1.0",
     "vimeo": "^2.3.1",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0",
